--- a/src/App.css
+++ b/src/App.css
@@ -140,11 +140,13 @@ Slider
   margin: 0 auto;
   margin-top: 4rem;
   width: 80vw;
+/* always need to have a  height */
   height: 450px;
   max-width: 800px;
   text-align: center;
   position: relative;
   display: flex;
+/*   overflow: hidden; */
 }
 .person-img {
   border-radius: 50%;
@@ -221,5 +223,22 @@ article {
   left: 0;
   width: 100%;
   height: 100%;
+/*   opacity: 0; */
   transition: var(--transition);
 }
+
+/* depending on the index value, will set up either active class or the last slide class */
+
+article.activeSlide {
+  opacity: 1;
+  transform: translateX(0);
+}
+article.lastSlide {
+  transform: translateX(-100%);
+}
+
+/* move all slides to the right  */
+
+article.nextSlide {  
+  transform: translateX(100%);
+} 
