set up useEffect

--- a/src/App.css
+++ b/src/App.css
@@ -223,7 +223,7 @@ article {
   left: 0;
   width: 100%;
   height: 100%;
-/*   opacity: 0; */
+  opacity: 0; 
   transition: var(--transition);
 }
 
